infra/kubernetes/base/auth/service.yml
apiVersion: v1
kind: Service
metadata:
  name: voicepay-auth
  namespace: default
spec:
  selector:
    app: voicepay-auth
  ports:
    - port: 8000
      targetPort: 8000
